--- a/desafio_7/.env
+++ b/desafio_7/.env
@@ -3,3 +3,5 @@ MONGO_USERNAME=valuupecchio
 MONGO_PASSWORD=zSCMX7FbzebL
 MONGO_DB_NAME=ecommerce
 PRIVATE_KEY=SecretKeyJWT
+ADMIN_EMAIL=adminCoder@coder.com
+ADMIN_PASSWORD=coder123
